fix: spacing

--- a/src/components/Mission/Mission.module.css
+++ b/src/components/Mission/Mission.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;  
   /* padding-top: calc(var(--mantine-spacing-xl) * 4); */
-  padding-bottom: calc(var(--mantine-spacing-xl) * 4);
+  padding-bottom: calc(var(--mantine-spacing-xl));
   gap: var(--mantine-spacing-xl);
   overflow: hidden;
   flex-direction: row; /* Default to row for wider screens */
